--- a/package.json
+++ b/package.json
@@ -43,17 +43,17 @@
     "eslint-plugin-standard": "^4.0.0",
     "flow-bin": "^0.81.0",
     "prettier": "^1.14.3",
-    "react": "^16.5.2",
+    "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.10",
     "react-test-renderer": "^16.5.2",
+    "webpack": "^4.19.1",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8",
-    "webpack-obfuscator": "^0.18.0",
-    "webpack": "^4.19.1",
     "webpack-dev-middleware": "^3.3.0",
-    "webpack-hot-middleware": "^2.24.1"
+    "webpack-dev-server": "^3.1.8",
+    "webpack-hot-middleware": "^2.24.1",
+    "webpack-obfuscator": "^0.18.0"
   },
   "name": "occ-react-component",
   "version": "1.0.0",
