--- a/file/widget/occReactComponent/templates/display.template
+++ b/file/widget/occReactComponent/templates/display.template
@@ -1,7 +1,7 @@
 <div data-bind="" class="" data-oc-id="a-widget">
   <!-- oc layout: panels -->
   <div class="row">
-    <div class="oc-panel col-md-5" data-oc-id="panel-0-0">
+    <div class="oc-panel" data-oc-id="panel-0-0">
       <!-- oc section: occ-react-component -->
       <div data-bind="onRender: onRender.bind($data)" id="occReactComponent"></div>
       <!-- /oc -->
