--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test:coverage": "jest --coverage",
     "flow": "flow"
   },
-  "dependencies": {},
+  "dependencies": {
+    "styled-components": "^4.1.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
@@ -68,7 +70,7 @@
     "webpack-obfuscator": "^0.18.0"
   },
   "name": "occ-react-component",
-  "version": "1.0.0",
+  "version": "1.6.2",
   "description": "Tool to help build react components for Oracle Commerce Cloud",
   "main": "inde.js",
   "repository": "git@github.com:leedium/occ-react-component.git",
