--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
       "@babel/preset-env",
       {
         "loose": true,
-        "modules": "amd",
+        "modules": "false",
         "targets": {
           "browsers": ["last 2 versions", "safari >= 7"]
         }
@@ -14,6 +14,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    "react-hot-loader/babel",
     "add-module-exports",
     "transform-class-properties",
     "syntax-dynamic-import",
