--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flow": "flow"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
