--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "build": "babel jsx -d js",
     "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production",
+    "build:prod": "NODE_ENV=production webpack --mode=production",
     "watch": "webpack --watch",
     "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
