--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "flow": "flow"
   },
   "dependencies": {},
+  "peerDependencies": {
+    "styled-components": ">=3"
+  },
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
