--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "build": "babel jsx -d js",
     "build:dev": "webpack --mode=development",
-    "build:prod": "NODE_ENV=production webpack --mode=production",
+    "build:prod": "webpack --env.production --mode=production",
     "watch": "webpack --watch",
     "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
@@ -13,9 +13,6 @@
     "flow": "flow"
   },
   "dependencies": {},
-  "peerDependencies": {
-    "styled-components": ">=3"
-  },
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
@@ -57,8 +54,8 @@
     "postcss-nested": "^4.1.1",
     "postcss-preset-env": "^6.5.0",
     "prettier": "^1.14.3",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-hot-loader": "^4.6.3",
     "react-test-renderer": "^16.5.2",
     "style-loader": "^0.23.1",
@@ -71,6 +68,9 @@
     "webpack-dev-server": "^3.1.8",
     "webpack-hot-middleware": "^2.24.1",
     "webpack-obfuscator": "^0.18.0"
+  },
+  "peerDependencies": {
+    "styled-components": "^4.1.3"
   },
   "name": "occ-react-component",
   "version": "1.7.3",
