--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,10 @@
     "prettier",
     "prettier/react"
   ],
-  "plugins": ["flowtype", "prettier"],
+  "plugins": [
+    "flowtype",
+    "prettier"
+  ],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2016,
@@ -22,19 +25,29 @@
   },
   "rules": {
     "import/no-amd": 0,
-    "import/no-unresolved": [2, { "amd": true }],
+    "import/no-unresolved": [
+      2,
+      {
+        "amd": true
+      }
+    ],
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    "import/no-extraneous-dependencies":["error",{"peerDependencies": true}],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "peerDependencies": true
+      }
+    ]
 
 
-    "spaced-comment": 0,
-    "no-unused-vars": 0,
-    "no-undef": 0,
-    "prefer-const": 0,
-    "react/jsx-curly-brace-presence": 0,
-    "react/prefer-stateless-function": 0,
-    "no-confusing-arrow": ["off"]
+    //    "spaced-comment": 0,
+    //    "no-unused-vars": 0,
+    //    "no-undef": 0,
+    //    "prefer-const": 0,
+    //    "react/jsx-curly-brace-presence": 0,
+    //    "react/prefer-stateless-function": 0,
+    //    "no-confusing-arrow": ["off"]
     //    "no-debugger": 0,
     //
     //    "no-useless-constructor": 0,
