--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.3",
     "sugarss": "^2.0.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.19.1",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.0",
