--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^8.0.2",
     "babel-watch": "^2.0.7",
     "base64-inline-loader": "^1.1.1",
+    "classnames": "^2.2.6",
     "css-loader": "^2.0.1",
     "cssnano": "^4.1.7",
     "eslint": "^5.6.0",
