--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
     "build": "babel jsx -d js",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --env.production --mode=production",
+    "build:dev": "jest && webpack --mode=development",
+    "build:prod": "jest && webpack --env.production --mode=production",
     "watch": "webpack --watch",
     "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
@@ -14,7 +14,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.1.0",
+    "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
@@ -23,7 +23,9 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.4.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
     "babel-watch": "^2.0.7",
     "base64-inline-loader": "^1.1.1",
@@ -47,6 +49,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "flow-bin": "^0.81.0",
     "http-proxy": "^1.17.0",
+    "jest": "^23.6.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-image-sizes": "^0.1.0",
     "postcss-import": "^12.0.1",
@@ -57,7 +60,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-hot-loader": "^4.6.3",
-    "react-test-renderer": "^16.5.2",
+    "react-test-renderer": "^16.7.0",
+    "regenerator-runtime": "^0.13.1",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.3",
     "sugarss": "^2.0.0",
