--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "scripts": {
     "build": "babel jsx -d js",
     "build:dev": "jest  && webpack --mode=development",
-    "build:prod": "jest && webpack --env.production --mode=production",
+    "build:prod": "webpack --env.production --mode=production",
     "watch": "webpack --watch",
     "format": "prettier --write --single-quote --print-width=120 --parser=flow --tab-width=2 \"js/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet",
     "dev": "webpack-dev-server --mode=development",
-    "test": "jest",
+    "test": "jest --config=jest.config.js",
     "test:watch": "jest --watch",
     "test:update": "jest -u",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --coverage --colors",
     "flow": "flow"
   },
   "dependencies": {},
@@ -30,9 +30,12 @@
     "babel-loader": "^8.0.2",
     "babel-watch": "^2.0.7",
     "base64-inline-loader": "^1.1.1",
+    "chai": "^4.2.0",
     "classnames": "^2.2.6",
     "css-loader": "^2.0.1",
     "cssnano": "^4.1.7",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
@@ -79,7 +82,7 @@
     "styled-components": "^4.1.3"
   },
   "name": "occ-react-component",
-  "version": "1.8.3",
+  "version": "2.1.0",
   "description": "Tool to help build react components for Oracle Commerce Cloud",
   "main": "app/index.js",
   "repository": "git@github.com:leedium/occ-react-component.git",
