--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.4.3",
+    "axios": "^0.18.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.6.0",
@@ -82,7 +83,7 @@
     "styled-components": "^4.1.3"
   },
   "name": "occ-react-component",
-  "version": "2.1.2",
+  "version": "2.2.2",
   "description": "Tool to help build react components for Oracle Commerce Cloud",
   "main": "app/index.js",
   "repository": "git@github.com:leedium/occ-react-component.git",
